--- a/index.html
+++ b/index.html
@@ -328,10 +328,10 @@
                  <div class="payment-container grid">
                      <div class="form-section">
                          <h3><i class="fa-solid fa-file-invoice-dollar"></i> Langkah 1: Transfer</h3>
-                         <p style="margin-bottom: 1rem;">Lakukan transfer sebesar <strong>Rp 150.000,-</strong> untuk Kunci API Premium (Akses Seumur Hidup) ke rekening berikut:</p>
+                         <p style="margin-bottom: 1rem;">Lakukan transfer sebesar <strong>Rp 15.000,-</strong> untuk Kunci API Premium (Akses Seumur Hidup) ke rekening berikut:</p>
                          <ul style="list-style: none; padding-left: 0; line-height: 1.8;">
-                             <li><strong><i class="fa-solid fa-university"></i> Bank:</strong> BCA</li>
-                             <li><strong><i class="fa-solid fa-id-card"></i> No. Rekening:</strong> 1234567890</li>
+                             <li><strong><i class="fa-solid fa-university"></i> E-WALLET:</strong> GOPAY</li>
+                             <li><strong><i class="fa-solid fa-id-card"></i> No. Rekening:</strong> 0895340205302</li>
                              <li><strong><i class="fa-solid fa-user"></i> Atas Nama:</strong> Nabila Studio Development</li>
                          </ul>
                      </div>
