--- a/index.html
+++ b/index.html
@@ -1,15 +1,14 @@
 <!DOCTYPE html>
 <html lang="id">
-<head>    
+<head>
  
-    <meta name="monetag" content="c61cf917a91abd7c95cd324339a7107d">meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Nabila Studio - Suite AI Kreatif Terlengkap (Novel, Gambar, Podcast, Jawaban, Lirik, Puisi, Roda Hiburan)</title>
     <meta name="description" content="Selamat datang di Nabila Studio. Hasilkan novel dengan gaya penulis ternama, gambar dari teks, podcast studio, dapatkan jawaban soal, ciptakan lirik, puisi, dan mainkan Roda Hiburan. Didukung oleh Cohere, Stability AI, ElevenLabs.">
     <meta name="keywords" content="AI, Nabila Studio, AI Image Generator, AI Novel Writer, Gaya Penulis, Enny Arrow, Sandra Brown, Asmaraman S. Kho Ping Hoo, Roda Keberuntungan, Podcast Generator, AI Penjawab Soal, Generator Lirik, Generator Puisi, Beli Kunci API, Cohere, Stability AI, ElevenLabs, Pixabay, Penulis, Podcaster, Kreator, Kecerdasan Buatan">
     <meta name="author" content="Nabila Studio Development">
     <meta name="robots" content="index, follow">
-
+<meta name="monetag" content="c61cf917a91abd7c95cd324339a7107d">
     <link rel="icon" href="https://img.icons8.com/fluency/48/prototyping-process.png" type="image/png">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
